fix: wrong spacing

--- a/src/styles/objects/_publication.scss
+++ b/src/styles/objects/_publication.scss
@@ -63,7 +63,7 @@
   }
 
   ul,
-  ol {
+  ol:not(.c-breadcrumbs__crumbs) {
     padding-inline-start: 1rem;
 
     li {
